Pull Figma styles into UI library and update inconsistencies
- Move/refactor custom plugins to their own files/directory
- Remove title utilities as there's no definition for them in Figma
- Add stories for various "style" definitions in Figma
- Add utilities for the common uppercase transformation
- Apply Lato globally
- Update some story groups that had a single story to not have a group
- Use the new uppercase transfomration utilities where relevant
- Add the hologram image as a background variant and update ChecCard to use it
- Add missing gradients to tailwind config
- Remove heading styles as there's no definition for them in Figma any longer
- Move tooltip story out of components directory

--- a/src/stories/components/BaseBreadCrumbs.stories.mdx
+++ b/src/stories/components/BaseBreadCrumbs.stories.mdx
@@ -3,7 +3,7 @@ import { withInfo } from 'storybook-addon-vue-info';
 import BaseBreadcrumbs from '../../components/BaseBreadcrumbs.vue';
 import StoryRouter from 'storybook-vue-router';
 
-<Meta title="Components/Breadcrumbs" component={BaseBreadcrumbs} />
+<Meta title="Components" component={BaseBreadcrumbs} />
 
 # Breadcrumbs
 
@@ -14,7 +14,7 @@ import StoryRouter from 'storybook-vue-router';
 Set to iterate breadcrumbs based on `this.$route.matched`; works well with  a global `vue-router` installation.
 
 <Preview>
-  <Story name="Default" decorators={[StoryRouter({}, {
+  <Story name="Breadcrumbs" decorators={[StoryRouter({}, {
     initialEntry: "/settings/developers/api-keys",
     routes: [
       {
