--- a/src/stories/components/BaseDivider.stories.mdx
+++ b/src/stories/components/BaseDivider.stories.mdx
@@ -2,14 +2,14 @@ import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
 import { text } from '@storybook/addon-knobs';
 import BaseDivider from '../../components/BaseDivider.vue';
 
-<Meta title="Components/Divider" component={BaseDivider} />
+<Meta title="Components" component={BaseDivider} />
 
 # Divider
 
 <Props of={BaseDivider} />
 
 <Preview>
-  <Story name="Default">
+  <Story name="Divider">
     {{
       components: {
         BaseDivider
