--- a/src/stories/components/ChecLoading.stories.mdx
+++ b/src/stories/components/ChecLoading.stories.mdx
@@ -4,14 +4,14 @@ import { text } from '@storybook/addon-knobs';
 import ChecLoading from '../../components/ChecLoading.vue';
 const widths = ['xs', 'sm', 'md', 'lg', 'xl', '2xl', '3xl', '4xl', '5xl', '6xl', 'full', 'screen-sm', 'screen-md', 'screen-lg', 'screen-xl', 'none'];
 
-<Meta title="Components/Loading" component={ChecLoading} />
+<Meta title="Components" component={ChecLoading} />
 
 # Default
 
 <Props of={ChecLoading} />
 
 <Preview>
-  <Story name="Default">
+  <Story name="Loading">
     {{
       components: {
         ChecLoading,
