--- a/src/stories/components/ChecProgressBar.stories.mdx
+++ b/src/stories/components/ChecProgressBar.stories.mdx
@@ -9,7 +9,7 @@ const options = {
   step: 1,
 };
 
-<Meta title="Components/Progress Bar" component={ChecProgressBar} />
+<Meta title="Components" component={ChecProgressBar} />
 
 # Progress Component
 
@@ -18,7 +18,7 @@ const options = {
 # Default
 
 <Preview>
-  <Story name="Default">
+  <Story name="Progress Bar">
     {{
       components: {
         ChecProgressBar
