--- a/src/stories/styles/tables.stories.mdx
+++ b/src/stories/styles/tables.stories.mdx
@@ -1,7 +1,6 @@
-import { Meta, Props, Story, Preview } from '@storybook/addon-docs/blocks';
-import { action } from '@storybook/addon-actions';
+import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
 
-<Meta title="Components/Tables" />
+<Meta title="Styles/Tables" />
 
 # Tables styles
 
