--- a/src/stories/components/ChecPaginate.stories.mdx
+++ b/src/stories/components/ChecPaginate.stories.mdx
@@ -3,7 +3,7 @@ import { action } from "@storybook/addon-actions";
 import { number, select, boolean } from '@storybook/addon-knobs';
 import ChecPaginate from '../../components/ChecPaginate.vue';
 
-<Meta title="Components/Pagination" component={ChecPaginate} />
+<Meta title="Components" component={ChecPaginate} />
 
 # Pagination
 
