--- a/src/stories/components/ChecModal.stories.mdx
+++ b/src/stories/components/ChecModal.stories.mdx
@@ -169,3 +169,62 @@ const widths = ['xs', 'sm', 'md', 'lg', 'xl', '2xl', '3xl', '4xl', '5xl', '6xl',
     }}
   </Story>
 </Preview>
+
+## With action toolbar
+
+<Props of={ChecModal} />
+
+<Preview>
+  <Story name="With action toolbar">
+    {{
+      components: {
+        BaseButton,
+        ChecModal,
+        TextField,
+      },
+      data() {
+        return {
+          showModal: true,
+        };
+      },
+      props: {
+        width: {
+          default: select('Width', widths, 'lg'),
+        },
+      },
+      methods: {
+        hideModal() {
+          this.showModal = false;
+        },
+      },
+      template: `
+        <div class="font-lato">
+          <ChecModal :width="width" header="Set up your account" undismissible>
+            <label class="block mb-4">
+              First name
+              <TextField value="Leslie" class="w-full" />
+            </label>
+            <label class="block mb-4">
+              Surname
+              <TextField value="Lawless" class="w-full" />
+            </label>
+            <label class="block mb-4">
+              Email address
+              <TextField value="lezlie@example.com" class="w-full" />
+            </label>
+            <div class="modal__toolbar">
+              <BaseButton color="red">
+                Cancel
+              </BaseButton>
+              <BaseButton color="green">
+                Create discount
+              </BaseButton>
+            </div>
+          </ChecModal>
+          <p class="text-left m-40">I am a bunch of content that the modal will be displayed on top of.</p>
+          <p class="text-center m-40">I am a bunch of content that the modal will be displayed on top of.</p>
+          <p class="text-right m-40">I am a bunch of content that the modal will be displayed on top of.</p>
+        </div>`
+    }}
+  </Story>
+</Preview>
