Name toolbar actions slot as "toolbar", and fix placeholder labels in modal stories

--- a/src/stories/components/ChecModal.stories.mdx
+++ b/src/stories/components/ChecModal.stories.mdx
@@ -98,16 +98,13 @@ const widths = ['xs', 'sm', 'md', 'lg', 'xl', '2xl', '3xl', '4xl', '5xl', '6xl',
         <div class="font-lato">
           <ChecModal :width="width" header="Set up your account" v-if="showModal">
             <label class="block mb-4">
-              First name
-              <TextField value="Leslie" class="w-full" />
+              <TextField label="First name" value="Leslie" class="w-full" />
             </label>
             <label class="block mb-4">
-              Surname
-              <TextField value="Lawless" class="w-full" />
+              <TextField label="Surname" value="Lawless" class="w-full" />
             </label>
             <label class="block mb-4">
-              Email address
-              <TextField value="lezlie@example.com" class="w-full" />
+              <TextField label="Email address" value="lezlie@example.com" class="w-full" />
             </label>
             <BaseButton color="red" class="mt-8" @click="hideModal">Close</BaseButton>
           </ChecModal>
@@ -150,16 +147,13 @@ const widths = ['xs', 'sm', 'md', 'lg', 'xl', '2xl', '3xl', '4xl', '5xl', '6xl',
         <div class="font-lato">
           <ChecModal :width="width" header="Set up your account" v-if="showModal" @dismiss="hideModal">
             <label class="block mb-4">
-              First name
-              <TextField value="Leslie" class="w-full" />
+              <TextField label="First name" value="Leslie" class="w-full" />
             </label>
             <label class="block mb-4">
-              Surname
-              <TextField value="Lawless" class="w-full" />
+              <TextField label="Surname" value="Lawless" class="w-full" />
             </label>
             <label class="block mb-4">
-              Email address
-              <TextField value="lezlie@example.com" class="w-full" />
+              <TextField label="Email address" value="lezlie@example.com" class="w-full" />
             </label>
           </ChecModal>
           <p class="text-left m-40">I am a bunch of content that the modal will be displayed on top of.</p>
@@ -201,25 +195,22 @@ const widths = ['xs', 'sm', 'md', 'lg', 'xl', '2xl', '3xl', '4xl', '5xl', '6xl',
         <div class="font-lato">
           <ChecModal :width="width" header="Set up your account" undismissible>
             <label class="block mb-4">
-              First name
-              <TextField value="Leslie" class="w-full" />
+              <TextField label="First name" value="Leslie" class="w-full" />
             </label>
             <label class="block mb-4">
-              Surname
-              <TextField value="Lawless" class="w-full" />
+              <TextField label="Surname" value="Lawless" class="w-full" />
             </label>
             <label class="block mb-4">
-              Email address
-              <TextField value="lezlie@example.com" class="w-full" />
+              <TextField label="Email address" value="lezlie@example.com" class="w-full" />
             </label>
-            <div class="modal__toolbar">
+            <template v-slot:toolbar>
               <BaseButton color="red">
                 Cancel
               </BaseButton>
               <BaseButton color="green">
-                Create discount
+                Save
               </BaseButton>
-            </div>
+            </template>
           </ChecModal>
           <p class="text-left m-40">I am a bunch of content that the modal will be displayed on top of.</p>
           <p class="text-center m-40">I am a bunch of content that the modal will be displayed on top of.</p>
