Date picker component now has a calendar icon in its right slot

--- a/src/stories/components/ChecDatepicker.stories.mdx
+++ b/src/stories/components/ChecDatepicker.stories.mdx
@@ -1,9 +1,9 @@
 import { Meta, Props, Story, Preview } from '@storybook/addon-docs/blocks';
 import ChecDatepicker from '../../components/ChecDatepicker.js';
 
-<Meta title="Form Fields" component={ChecDatepicker} />
+<Meta title="Form fields" component={ChecDatepicker} />
 
-# Datepicker
+# Date picker
 
 Extends the [Flatpickr wrapper component](https://github.com/ankurk91/vue-flatpickr-component) in order to:
 
@@ -18,7 +18,7 @@ prop definitions on the library component are also available _except `config`_.
 <Props of={ChecDatepicker} />
 
 <Preview>
-  <Story name="Date Picker">
+  <Story name="Date picker">
     {{
       components: {
         ChecDatepicker,
