Add mono (roboto) font that's used in designs

--- a/src/stories/styles/typography.stories.mdx
+++ b/src/stories/styles/typography.stories.mdx
@@ -56,3 +56,24 @@ import { Meta, Story, Preview } from '@storybook/addon-docs/blocks';
     }}
   </Story>
 </Preview>
+
+## Faces
+
+<Preview>
+  <Story name="Faces">
+    {{
+      template: `
+        <div class="p-16 bg-gray-200 text-gray-500 grid grid-cols-2 col-gap-16 row-gap-12">
+          <div class="p-8 bg-white font-lato">
+            <div class="font-lato mb-2 caps-xs text-gray-400">.font-lato</div>
+            Imagination will often carry us to worlds that never were, but without it we go nowhere.
+          </div>
+          <div class="p-8 bg-white font-mono">
+            <div class="font-lato mb-2 caps-xs text-gray-400">.font-mono</div>
+            Imagination will often carry us to worlds that never were, but without it we go nowhere.
+          </div>
+        </div>
+      `,
+    }}
+  </Story>
+</Preview>
