Set not-allowed cursor and update disabled active state

--- a/src/stories/components/BaseButton.stories.mdx
+++ b/src/stories/components/BaseButton.stories.mdx
@@ -41,7 +41,7 @@ Todo list
           default: select('Variant', ['large', 'regular', 'small', 'round'], 'regular'),
         },
         disabled: {
-          default: select('Disabled', [true, false], false),
+          default: boolean('Disabled', false),
         },
         text: {
           default: text('Text', 'Button text'),
