Add icon prop to button and scale icon to text size

--- a/src/stories/components/BaseButton.stories.mdx
+++ b/src/stories/components/BaseButton.stories.mdx
@@ -58,11 +58,14 @@ Todo list
       },
       template: `
         <div class="py-16 flex justify-center">
-          <base-button :color="color" :variant="variant" :icon-position="iconPosition" :disabled="disabled">
+          <base-button
+            :color="color"
+            :variant="variant"
+            :icon-position="iconPosition"
+            :disabled="disabled"
+            :icon="hasIcon ? icon : null"
+          >
             {{text}}
-            <template v-if="hasIcon" v-slot:icon>
-              <ChecIcon :icon="icon" />
-            </template>
           </base-button>
         </div>
       `,
