Update usage of changed action name

--- a/src/stories/components/TextField.stories.mdx
+++ b/src/stories/components/TextField.stories.mdx
@@ -197,7 +197,7 @@ import ChecSegmentedButtonsGroup from '../../components/ChecSegmentedButtonsGrou
             :label="label"
             v-model="inputValue"
             :actionLabel="actionLabel"
-            @actionClick="handleClick"
+            @action-click="handleClick"
           />
         </div>
       `
