add new nav icons, replace icons in nav component

--- a/src/stories/components/ChecNavigation.stories.mdx
+++ b/src/stories/components/ChecNavigation.stories.mdx
@@ -21,6 +21,15 @@ const routes = [
     },
   },
   {
+    path: '/developers',
+    meta: {
+      navItem: {
+        label: 'Developers',
+        iconName: 'developers'
+      },
+    },
+  },
+  {
     path: '/orders',
     meta: {
       navItem: {
