--- a/src/stories/components/ChecAvatar.stories.mdx
+++ b/src/stories/components/ChecAvatar.stories.mdx
@@ -20,7 +20,7 @@ import TextField from '../../components/TextField.vue';
       },
       props: {
         variant: {
-          default: select('Size', ['sm', 'md', 'lg']),
+          default: select('Size', ['sm', 'md', 'lg'], 'sm'),
         },
         image: {
           default: text('Image URL', ''),
@@ -45,7 +45,7 @@ import TextField from '../../components/TextField.vue';
       },
       props: {
         variant: {
-          default: select('Size', ['sm', 'md', 'lg']),
+          default: select('Size', ['sm', 'md', 'lg'], 'lg'),
         },
         image: {
           default: text('Image URL', 'http://lorempixel.com/400/400/people/'),
@@ -57,6 +57,39 @@ import TextField from '../../components/TextField.vue';
             :variant="variant"
             :image="image"
           />
+        </div>`
+    }}
+  </Story>
+</Preview>
+
+<Preview>
+  <Story name="With aspect-ratio 1:1 size">
+    {{
+      components: {
+        ChecAvatar
+      },
+      props: {
+        image: {
+          default: text('Image URL', 'http://lorempixel.com/400/400/people/'),
+        },
+      },
+      template: `
+        <div class="p-16 bg-gray-100">
+          <div class="max-w-xs">
+            <ChecAvatar
+              :image="image"
+            />
+          </div>
+          <div class="max-w-md">
+            <ChecAvatar
+              :image="image"
+            />
+          </div>
+          <div class="max-w-lg">
+            <ChecAvatar
+              :image="image"
+            />
+          </div>
         </div>`
     }}
   </Story>
