Force navigation item text to not wrap onto new lines

--- a/src/stories/components/ChecNavigation.stories.mdx
+++ b/src/stories/components/ChecNavigation.stories.mdx
@@ -179,7 +179,7 @@ don't provide a sort at all, it will default to 100.**
       },
       data() {
         return { links: [{
-          label: 'Spaces',
+          label: 'Spaces storefront',
           href: 'https://google.com',
           iconName: 'spaces',
         }] };
