--- a/src/stories/components/ChecModal.stories.mdx
+++ b/src/stories/components/ChecModal.stories.mdx
@@ -23,10 +23,16 @@ const widths = ['xs', 'sm', 'md', 'lg', 'xl', '2xl', '3xl', '4xl', '5xl', '6xl',
         width: {
           default: select('Width', widths, '2xl'),
         },
+        overlay: {
+          default: select('Overlay', ['light', 'dark']),
+        },
       },
       template: `
         <div>
-          <ChecModal :width="width">
+          <ChecModal
+            :width="width"
+            :overlay="overlay"
+          >
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi auctor imperdiet pellentesque. Mauris quam enim, vehicula ac felis vel, tempus tincidunt massa.</p>
             <p>Mauris eget mi neque. Nullam eu est a velit mattis cursus vel nec purus. Pellentesque tincidunt ornare auctor.</p>
             <p>Mauris vitae lobortis justo. Donec nec nisl condimentum, efficitur tellus vel, lobortis leo. Curabitur volutpat porta sapien, eget sagittis est placerat ac. Cras commodo vehicula arcu, sed tincidunt ligula molestie ac.</p>
@@ -51,10 +57,13 @@ const widths = ['xs', 'sm', 'md', 'lg', 'xl', '2xl', '3xl', '4xl', '5xl', '6xl',
         width: {
           default: select('Width', widths, '2xl'),
         },
+        overlay: {
+          default: select('Overlay', ['light', 'dark']),
+        },
       },
       template: `
         <div>
-          <ChecModal :width="width" header="Modal title">
+          <ChecModal :overlay="overlay" :width="width" header="Modal title">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi auctor imperdiet pellentesque. Mauris quam enim, vehicula ac felis vel, tempus tincidunt massa.</p>
             <p>Mauris eget mi neque. Nullam eu est a velit mattis cursus vel nec purus. Pellentesque tincidunt ornare auctor.</p>
             <p>Mauris vitae lobortis justo. Donec nec nisl condimentum, efficitur tellus vel, lobortis leo. Curabitur volutpat porta sapien, eget sagittis est placerat ac. Cras commodo vehicula arcu, sed tincidunt ligula molestie ac.</p>
@@ -92,6 +101,9 @@ const widths = ['xs', 'sm', 'md', 'lg', 'xl', '2xl', '3xl', '4xl', '5xl', '6xl',
         width: {
           default: select('Width', widths, 'lg'),
         },
+        overlay: {
+          default: select('Overlay', ['light', 'dark']),
+        },
       },
       methods: {
         hideModal() {
@@ -100,7 +112,7 @@ const widths = ['xs', 'sm', 'md', 'lg', 'xl', '2xl', '3xl', '4xl', '5xl', '6xl',
       },
       template: `
         <div class="font-lato">
-          <ChecModal :form="form" :width="width" header="Set up your account" v-if="showModal">
+          <ChecModal :overlay="overlay" :form="form" :width="width" header="Set up your account" v-if="showModal">
             <label class="block mb-4">
               <TextField label="First name" value="Leslie" class="w-full" />
             </label>
@@ -144,6 +156,9 @@ const widths = ['xs', 'sm', 'md', 'lg', 'xl', '2xl', '3xl', '4xl', '5xl', '6xl',
         width: {
           default: select('Width', widths, 'lg'),
         },
+        overlay: {
+          default: select('Overlay', ['light', 'dark']),
+        },
       },
       methods: {
         hideModal() {
@@ -152,7 +167,7 @@ const widths = ['xs', 'sm', 'md', 'lg', 'xl', '2xl', '3xl', '4xl', '5xl', '6xl',
       },
       template: `
         <div class="font-lato">
-          <ChecModal :form="form" :width="width" header="Set up your account" undismissible>
+          <ChecModal :overlay="overlay" :form="form" :width="width" header="Set up your account" undismissible>
             <label class="block mb-4">
               <TextField label="First name" value="Leslie" class="w-full" />
             </label>
@@ -197,6 +212,9 @@ const widths = ['xs', 'sm', 'md', 'lg', 'xl', '2xl', '3xl', '4xl', '5xl', '6xl',
         form: {
           default: () => boolean('Use <form> root', true),
         },
+        overlay: {
+          default: select('Overlay', ['light', 'dark']),
+        },
         width: {
           default: select('Width', widths, 'lg'),
         },
@@ -208,7 +226,7 @@ const widths = ['xs', 'sm', 'md', 'lg', 'xl', '2xl', '3xl', '4xl', '5xl', '6xl',
       },
       template: `
         <div class="font-lato">
-          <ChecModal :form="form" :width="width" header="Set up your account" undismissible>
+          <ChecModal :overlay="overlay" :form="form" :width="width" header="Set up your account" undismissible>
             <ChecLoading message="Please wait..." />
           </ChecModal>
           <p class="text-left m-40">I am a bunch of content that the modal will be displayed on top of.</p>
