--- a/src/stories/components/ChecAccordion.stories.mdx
+++ b/src/stories/components/ChecAccordion.stories.mdx
@@ -187,7 +187,7 @@ import TextField from '../../components/TextField.vue';
             :subtitle="subtitle"
             class="w-1/2"
           >
-            <ChecCard :borders="'none'" :compact="compact" class="w-full h-40">
+            <ChecCard :borders="'none'" class="w-full h-40">
               <p class="self-center mx-auto">Nothing here</p>
             </ChecCard>
           </ChecAccordion>
