--- a/src/stories/components/ChecNavigation.stories.mdx
+++ b/src/stories/components/ChecNavigation.stories.mdx
@@ -1,87 +1,30 @@
-import { Meta, Story, Preview, Props} from '@storybook/addon-docs/blocks';
+import { Meta, Story, Preview, Props } from '@storybook/addon-docs/blocks';
 import ChecNavigation from '../../components/ChecNavigation.vue';
 import StoryRouter from 'storybook-vue-router';
+import { boolean } from '@storybook/addon-knobs';
+import { action } from "@storybook/addon-actions";
 const routes = [
   {
-    path: '/categories',
-    meta: {
-      navItem: {
-        label: 'Categories',
-        iconName: 'categories'
-      },
-    },
-  },
-  {
-    path: '/discounts',
-    meta: {
-      navItem: {
-        label: 'Discounts',
-        iconName: 'discounts'
-      },
-    },
-  },
-  {
-    path: '/developers',
-    meta: {
-      navItem: {
-        label: 'Developers',
-        iconName: 'developers'
-      },
-    },
-  },
-  {
     path: '/orders',
-    meta: {
-      navItem: {
-        label: 'Orders',
-        iconName: 'orders',
-        sort: 10,
-      },
-    },
+  },
+  {
+    path: '/account',
   },
   {
     path: '/products',
-    meta: {
-      navItem: {
-        label: 'Products',
-        iconName: 'products',
-        sort: 20,
-      },
-    },
   },
   {
-      path: '/settings',
-      meta: {
-        navItem: {
-          label: 'Settings',
-          iconName: 'settings',
-          sort: 500,
-        },
-      },
-    },
-  {
-    path: '/logs',
-    meta: {
-      navItem: {
-        label: 'Logs',
-        iconName: 'logs'
-      },
-    },
+    path: '/categories',
   },
 ];
 
 <Meta title="Components/Navigation" component={ChecNavigation} />
 
-## Navigation
+# Navigation
 
-The Navigation component takes the `vue-router` routes are are defined on the Vue instance for the project
-you use the UI library in, e.g. the dashboard, and looks for any routes that are annotated with `navItem`
-objects in the `meta` data. It will then use them in the navigation.
-
-You may control the sort order by adding `sort: n` to this meta object. A low sort order will give it
-precedence in the navigation, e.g. "Orders" may be given a sort of -10 or less to make it show at the top of
-the navigation, while "Settings" should always be last, so one should give a sort of 500 or more. **If you
-don't provide a sort at all, it will default to 100.**
+The Navigation component takes a "tree" of navigation links and renders a sidebar with buttons for sections, and
+an expandable "drawer" that shows sub-navigation for each section. This component is fairly "dumb", and respects
+the order of the "tree" that it is given
 
 <Props of={ChecNavigation} />
 
@@ -91,102 +34,76 @@ don't provide a sort at all, it will default to 100.**
       components: {
         ChecNavigation
       },
-      template: `
-      <div class="w-full">
-        <ChecNavigation class="absolute"/>
-      </div>`
-    }}
-  </Story>
-</Preview>
-
-## Navigation with active route
-
-<Preview>
-  <Story
-    name="With active /orders route"
-    decorators={[ StoryRouter({}, { initialEntry: '/orders/55555', routes })]}>
-    {{
-      components: {
-        ChecNavigation
-      },
-      template: `
-      <div class="w-full">
-        <ChecNavigation />
-      </div>`
-    }}
-  </Story>
-</Preview>
-
-## Navigation set to expand (/orders)
-
-<Preview>
-  <Story
-    name="Expanded"
-    decorators={[ StoryRouter({}, { initialEntry: '/orders/55555', routes })]}>
-    {{
-      components: {
-        ChecNavigation
-      },
-      template: `
-      <div class="w-full">
-        <ChecNavigation :expanded="true" />
-      </div>`
-    }}
-  </Story>
-</Preview>
-
-
-## Navigation with slot content
-
-<Preview>
-  <Story
-    name="With slot"
-    decorators={[ StoryRouter({}, { initialEntry: '/orders/55555', routes })]}>
-    {{
-      components: {
-        ChecNavigation
-      },
-      template: `
-      <div class="w-full">
-        <ChecNavigation>
-          <div>
-            <svg width="48" height="48" viewBox="0 0 48 48" fill="none">
-              <path d="M0 24C0 10.7452 10.7452 0 24 0C37.2548 0 48 10.7452 48 24C48 37.2548 37.2548 48 24 48C10.7452 48 0 37.2548 0 24Z" fill="white"/>
-              <ellipse cx="23.9999" cy="21" rx="4" ry="4" stroke="#7187A5" stroke-width="2"/>
-              <path d="M30.9999 31C30.9999 27.6863 27.8659 25 23.9999 25C20.1339 25 16.9999 27.6863 16.9999 31" stroke="#7187A5" stroke-width="2" stroke-linecap="round"/>
-              <path d="M24 47C11.2975 47 1 36.7025 1 24H-1C-1 37.8071 10.1929 49 24 49V47ZM47 24C47 36.7025 36.7025 47 24 47V49C37.8071 49 49 37.8071 49 24H47ZM24 1C36.7025 1 47 11.2975 47 24H49C49 10.1929 37.8071 -1 24 -1V1ZM24 -1C10.1929 -1 -1 10.1929 -1 24H1C1 11.2975 11.2975 1 24 1V-1Z" fill="url(#pattern0)"/>
-              <defs>
-                <pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
-                  <use xlink:href="#image0" transform="translate(0 -0.0406852) scale(0.00107066)"/>
-                </pattern>
-              </defs>
-            </svg>
-          </div>
-        </ChecNavigation>
-      </div>`
-    }}
-  </Story>
-</Preview>
-
-## With external link
-<Preview>
-  <Story
-    name="With external link"
-    decorators={[ StoryRouter({}, { initialEntry: '/orders/55555', routes })]}>
-    {{
-      components: {
-        ChecNavigation
+      props: {
+        open: {
+          type: Boolean,
+          default: boolean('Open drawer', false),
+        },
+        controlled: {
+          type: Boolean,
+          default: boolean('"Controlled" mode', false),
+        },
       },
       data() {
-        return { links: [{
-          label: 'Spaces storefront',
-          href: 'https://google.com',
-          iconName: 'spaces',
-        }] };
+        return {
+          tree: [
+            {
+              label: 'Orders',
+              icon: 'orders',
+              links: [
+                {
+                  label: 'Orders',
+                  to: '/orders',
+                },
+              ],
+            },
+            {
+              label: 'Products',
+              icon: 'products',
+              links: [
+                {
+                  label: 'Products',
+                  to: '/products',
+                },
+                {
+                  label: 'Categories',
+                  to: '/categories',
+                },
+              ],
+            },
+            {
+              label: 'Spaces storefront',
+              icon: 'spaces',
+              divider: true,
+              links: [
+                {
+                  label: 'View storefront',
+                  to: 'https://google.com',
+                }
+              ]
+            }
+          ],
+          user: {
+            label: 'Account',
+            divider: true,
+            links: [
+              {
+                label: 'Edit account',
+                to: '/account',
+              },
+              {
+                label: 'Logout',
+                handle: action('Logged out!'),
+              }
+            ]
+          }
+        };
       },
       template: `
       <div class="w-full">
-        <ChecNavigation :additional-links="links" />
+        <ChecNavigation :tree="tree" :user-section="user" :open="open" :controlled="controlled">
+          Some footer content
+        </ChecNavigation>
       </div>`
     }}
   </Story>
