--- a/src/stories/components/ChecNavigation.stories.mdx
+++ b/src/stories/components/ChecNavigation.stories.mdx
@@ -1,4 +1,5 @@
 import { Meta, Story, Preview, Props } from '@storybook/addon-docs/blocks';
+import BaseButton from '../../components/BaseButton.vue';
 import ChecNavigation from '../../components/ChecNavigation.vue';
 import StoryRouter from 'storybook-vue-router';
 import { boolean } from '@storybook/addon-knobs';
@@ -32,6 +33,7 @@ the order of the "tree" that it is given
   <Story name="Default" decorators={[ StoryRouter({}, { routes })]}>
     {{
       components: {
+        BaseButton,
         ChecNavigation
       },
       props: {
@@ -102,7 +104,13 @@ the order of the "tree" that it is given
       template: `
       <div class="w-full">
         <ChecNavigation :tree="tree" :user-section="user" :open="open" :controlled="controlled">
-          Some footer content
+          <div class="h-12 flex items-center justify-between">
+            <div class="leading-none">
+              Leslie Lawless<br />
+              <small class="text-gray-400 mt-1">#123</small>
+            </div>
+            <BaseButton icon="link" variant="small" />
+          </div>
         </ChecNavigation>
       </div>`
     }}
